<resources>
    <string name="app_name">FG Tracking</string>
    <string name="enter_pin">Please enter user login pin:</string>
    <string name="login">Login</string>
    <string name="plz_enter_pin">Please enter user login pin.</string>
    <string name="invalid_pin">Invalid Pin</string>
    <string name="login_successfully">Logged in successfully!!!</string>
    <string name="move">Move</string>
    <string name="reportasfinished">RAF</string>
    <string name="quality_check">Quality Check</string>
    <string name="assignlocation_flt">Assign</string>
    <string name="pickload"><![CDATA[Pick & Load]]></string>
    <string name="return_stillage">Return Stillage</string>
    <string name="recieve_return_stillage">Receive Stillage</string>
    <string name="scan_stillage">Scan/Type</string>
    <string name="stillage_number">Stillage Number:</string>
    <string name="stillage_quantity">Stillage Quantity:</string>
    <string name="stillage_name">Stillage Name:</string>
    <string name="stillage_stdquantity">Stillage Std Quantity:</string>
    <string name="item">Item:</string>
    <string name="dashbord">Select Operation</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="universalSpinner">Reason</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="assignFlt">Assign FLT?</string>
    <string name="assign">Assign</string>
    <string name="unassign">Don\'t Assign</string>
    <string name="quantity_must_not_greater_than_stillage_qty">Quantity Must Not Greater Than Stillage Quantity!</string>
    <string name="quantity_must_not_greater_than_stillage_std_qty">Quantity Must Not Greater Than Stillage Standard Quantity!</string>
    <string name="quantiy_must_not_be_blank">Quantity Must Not Blank!</string>
    <string name="please_scan_stillage">Please Scan Stillage</string>
    <string name="data_saved_successfully">Data Saved Successfully</string>
    <string name="select_reason">Select Reason!</string>
    <string name="drop_location">Drop Location</string>
    <string name="enter_drop_location">Enter Drop Location</string>
    <string name="enter_putaway_location">Enter Move Location/Zone</string>
    <string name="aisle">Aisle:</string>
    <string name="bin">Bin:</string>
    <string name="rack">Rack:</string>
    <string name="reject_quantity_pcs">QC Process Rejection Pcs</string>
    <string name="reject_quantity_kg">QC Process Rejection Kg</string>
    <string name="reject_quantity_">Reject Quantity</string>
    <string name="reject_complete_stillage">Reject Complete Stillage</string>
    <string name="quality_hold_and_move"><![CDATA[Quality Hold]]></string>
    <string name="select_quality_check_operation">Select Quality Check Operation</string>
    <string name="button_reject">Reject</string>
    <string name="enter_reject_quantity">Enter Reject Quantity</string>
    <string name="reason">Reason</string>
    <string name="items_rejected_successfully"> Items Rejected Successfully</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="mark">Mark</string>
    <string name="button_hold">Hold</string>
    <string name="release">Release</string>
    <string name="items_hold">Item Hold</string>
    <string name="items_unhold">Item Unhold</string>
    <string name="assign_location">Assign Location/Zone?</string>
    <string name="scan_location">Scan Location</string>
    <string name="scan_parent_stillage">Parent Scan/Type</string>
    <string name="scan_child_stillage">Child Scan/Type</string>
    <string name="merge_quantity">Merge Quantity</string>
    <string name="enter_merge_quantity">Enter Merge Quantity</string>
    <string name="merge">Merge</string>
    <string name="merge_stillage">Merge Stillage</string>
    <string name="enter_scan_location">Enter Scan Location</string>
    <string name="select_aisle">Select Aisle</string>
    <string name="select_rack">Select Rack</string>
    <string name="select_bin">Select Bin</string>
    <string name="item_location_assigned_successfully">Item Location Assigned Successfully</string>
    <string name="item_location_unassigned_successfully">Item Location Unassigned Successfully</string>
    <string name="item_flt_assigned_successfully">FLT User Assigned Successfully</string>
    <string name="item_flt_unassigned_successfully">FLT User Unassigned Successfully</string>
    <string name="assign_flt">Assign FLT?</string>
    <string name="invalid_merge_quantity">Invalid Merge Quantity</string>
    <string name="item_merged_successfully">Item Merged Successfully</string>
    <string name="drop">Drop</string>
    <string name="item_droped_successfully">Item Dropped Successfully</string>
    <string name="item_returned_successfully">Item Returned Successfully</string>
    <string name="work_number">Work Order</string>
    <string name="site">Site</string>
    <string name="warehouse">Warehouse</string>
    <string name="confirm_loading_quantity">Confirm Loading Quantity</string>
    <string name="load_quantity">Load Quantity</string>
    <string name="button_confirm">Confirm</string>
    <string name="change_quantity">Change Quantity</string>
    <string name="button_receive">Receive</string>
    <string name="item_received_successfully">Item Received Successfully</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add_more">Add More</string>
    <string name="assigned_location">Assigned Location</string>
    <string name="put_away_location">Move Location</string>
    <string name="loading_plan">Loading Plan:</string>
    <string name="customer">Customer:</string>
    <string name="logout_successfully">Logged Out Successfully!!!</string>
    <string name="scan_loading_plan">Scan Loading Plan:</string>
    <string name="trucknumber">Truck Number:</string>
    <string name="truckdriver">Truck Driver:</string>
    <string name="gatenumber">Gate Number:</string>
    <string name="dialog_message">Are You Sure To Pick?</string>
    <string name="please_add_load_quantity">Please Add Load Quantity</string>
    <string name="location">Location:</string>
    <string name="location_">Zone/Location</string>
    <string name="stillage_merge_message">Stillage Merged Successfully</string>
    <string name="confirmation">Confirmation</string>
    <string name="exit">Exit</string>
    <string name="stillage_not_exits_in_this_loading_plan">This Stillage Does Not Exist In This Loading Plan</string>
    <string name="scan_t_a_r">Scan Truck Assignment Report</string>
    <string name="scan_report">Scan Report</string>
    <string name="please_scan_t_a_r">Please Scan Truck Assignment Report</string>
    <string name="stillage_loading_plan_doesnt_match_with_tar">Stillage Loading Plan Doesn\'t Match With Truck Assignment Report</string>
    <string name="do_you_want_to_pick_this_stillage">Do you want to pick this stillage ?</string>
    <string name="stillage_loaded_successfully">Stillage Loaded Successfully</string>
    <string name="picked_successfully">is Picked Successfully</string>
    <string name="itemDesc">Item Description:</string>
    <string name="lookUp">Look Up</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="success">Success</string>
    <string name="quantity_must_not_be_zero">Quantity Must Not Be Zero!</string>
    <string name="quantity_updated_successfully">Quantity Updated Successfully</string>
    <string name="something_went_wrong_please_try_again">Something Went Wrong. Please Try Again</string>
    <string name="move_">Move</string>
    <string name="shift">Shift</string>
    <string name="confirm_r_a_f_quantity">Confirm RAF Quantity</string>
    <string name="select_shift">Select Shift</string>
    <string name="enter_stillage_number">Enter Stillage Number</string>
    <string name="no_data_found">No Data Found</string>
    <string name="select_flt">Select FLT</string>
    <string name="child_and_parent_warehouse_not_matched">Child and Parent Warehouse Not Matched!</string>
    <string name="child_and_parent_not_matched">Child and Parent Items Not Matched!</string>
    <string name="sum_of_stillage_quantity_after_merge">Sum of Stillage Quantity After Merge:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="transfer">Transfer</string>
    <string name="to_warehouse">\'To\' Warehouse</string>
    <string name="select_warehouse">Select Warehouse</string>
    <string name="transfer_stillage">Transfer Stillage</string>
    <string name="item_transferred_successfully">Item Transferred Successfully</string>
    <string name="transferred_successfully">transferred Successfully</string>
    <string name="discard">Discard</string>
    <string name="nodiscard">No Discard</string>
    <string name="this_stillage_already_merged">This stillage is already merged</string>
    <string name="this_stillage_already_recieved">This stillage is already received</string>
    <string name="proceed_offline">Do You Want To Proceed In Offline Mode?</string>
    <string name="data_saved_offline">Data Saved Offline</string>
    <string name="child_and_parent_cannot_be_same">Child And Parent Stillage Can\'t  Be Same</string>
    <string name="no_internet">No Internet!</string>
    <string name="scan_type_loading_plan">Scan/Type Driver Assignment Report:</string>
    <string name="scan_type">Scan/Type</string>
    <string name="loading_plan_not_matched_with_tar">Loading Plan didn\'t matched with TAR</string>
    <string name="load_quantiy_must_be_lower_than_tobeload">Load Quantity Must Not Greater Than \'To Be Load Quantity\'</string>
    <string name="to_be_load_quantity">To be loaded qty from this stillage:</string>
    <string name="enter_update_quantity">Enter Update Quantity</string>
    <string name="item_updated_successfully">Item Updated Successfully</string>
    <string name="delete">Delete</string>
    <string name="stillage_unpicked">Stillage Unpicked</string>
    <string name="unpick">UnPick</string>
    <string name="end_pick">End Pick</string>
    <string name="automatic_route_consumption">Automatic Route Consumption</string>
    <string name="automatic_picking_list_consumption">Automatic Picking List Consumption</string>
    <string name="select_default_value">Select Default Value</string>
    <string name="title_activity_production_journal">ProductionJournal</string>
    <string name="tab_1_picking_list">Picking List</string>
    <string name="tab_2_route_card">Route Card</string>
    <string name="production_journal">Production Journal</string>
    <string name="submit">Submit</string>
    <string name="search_item">Search Item</string>
    <string name="ok">OK</string>
    <string name="work_order_number">Work Order Number:</string>
    <string name="item_name">Item Name:</string>
    <string name="workorder_start_end">Work Order Start/End</string>
    <string name="scan_type_lot">Scan/Type Lot</string>
    <string name="production_line">Production Line:</string>
    <string name="warehouse_">Warehouse:</string>
    <string name="confirm_and_post"><![CDATA[Confirm & Post]]></string>
    <string name="date">Date:</string>
    <string name="add_more_line">Add Line</string>
    <string name="operation">Operation:</string>
    <string name="resource">Resource:</string>
    <string name="resource_type">Resource Type:</string>
    <string name="hours">Hours:</string>
    <string name="select_reason_end_pick">Select Reason For End Pick</string>
    <string name="select_site_warehouse"><![CDATA[Select Site & Warehouse]]></string>
    <string name="select_any_one">Select any one :</string>
    <string name="select_to_make_transfer_journal">Transfer Journal</string>
    <string name="select_to_make_transfer_order">Transfer Order</string>
    <string name="user_info">User Info</string>
</resources>