<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/menu_icon"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/user_details"
                android:icon="@drawable/ic_user_info"
                android:title="@string/user_info"
                android:tooltipText="@string/settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/logout_menu"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout"
                android:tooltipText="@string/logout"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>
