<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/select_any_one"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RadioGroup
            android:id="@+id/radioGroupTransferType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonTJ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_to_make_transfer_journal"/>

            <RadioButton
                android:id="@+id/radioButtonTO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_to_make_transfer_order"/>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLoadQtyButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.neprofinishedgood.custom_views.CustomButton
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/button_ripple_effect"
            android:gravity="center"
            android:nextFocusDown="@id/buttonCancel"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>