<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonColor"
        android:padding="5dp"
        android:text="@string/confirm_loading_quantity"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/load_quantity"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editTextLoadQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:background="@drawable/editext_drawable"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLoadQtyButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.neprofinishedgood.custom_views.CustomButton
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/button_ripple_effect"
            android:gravity="center"
            android:text="@string/button_confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <com.neprofinishedgood.custom_views.CustomButton
            android:id="@+id/buttonChangeQuantity"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_ripple_effect"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/change_quantity"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>