<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="7dp"
        android:text="@string/select_site_warehouse"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayoutLocationSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stillageDetail"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/linearLayoutToSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="4dp"
            android:visibility="visible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.1"
                android:text="@string/site"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinnerSite"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:background="@drawable/spinner_background" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutToWarehouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:visibility="visible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.1"
                android:text="@string/warehouse"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinnerWarehouse"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:background="@drawable/spinner_background" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLoadQtyButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.neprofinishedgood.custom_views.CustomButton
            android:id="@+id/buttonTransfer"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/button_ripple_effect"
            android:gravity="center"
            android:enabled="false"
            android:nextFocusDown="@id/buttonCancel"
            android:text="@string/transfer"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <com.neprofinishedgood.custom_views.CustomButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_ripple_effect"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>