<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".productionjournal.ui.main.RouteCardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".46"
                android:text="@string/shift"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinnerShift"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight=".73"
                android:background="@drawable/spinner_background" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_weight=".3"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight=".7"
                android:background="@drawable/edittext_drawable"
                android:focusable="false"
                android:maxLines="1"
                android:padding="5dp"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".5"
                android:text="@string/operation"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinnerOperation"
                style="@style/AppTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="2"
                android:background="@drawable/spinner_background" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".35"
                android:text="@string/resource"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewResource"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight=".4"
                android:maxLines="1"
                android:padding="5dp"
                android:text=""
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_weight=".5"
                android:text="@string/resource_type"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewResourceType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight=".4"
                android:maxLines="1"
                android:padding="5dp"
                android:text=""
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".73"
                android:text="@string/hours"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextHours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_drawable"
                android:inputType="number"
                android:maxLines="1"
                android:padding="5dp"
                android:text=""
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_weight=".6"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_drawable"
                android:inputType="number"
                android:maxLines="1"
                android:padding="5dp"
                android:text=""
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout4"
            android:layout_marginTop="5dp">

            <com.neprofinishedgood.custom_views.CustomButton
                android:id="@+id/buttonAddMoreLine"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1.4"
                android:background="@drawable/button_ripple_effect"
                android:padding="0dp"
                android:text="@string/add_more_line"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRouteList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout5"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="45dp"
            android:background="@android:color/transparent"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/picking_list_layout"
            />

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <com.neprofinishedgood.custom_views.CustomButton
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:visibility="visible" />

            <com.neprofinishedgood.custom_views.CustomButton
                android:id="@+id/buttonConfirm"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:text="@string/confirm_and_post"
                android:textColor="@color/white"
                android:visibility="visible" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>